[collector-caldera] Add collector caldera (#4)

--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,6 @@
 
     <modules>
         <module>openex-users</module>
+        <module>openex-collector-caldera</module>
     </modules>
 </project>
